--- a/.github/workflows/scribe.yml
+++ b/.github/workflows/scribe.yml
@@ -17,7 +17,7 @@ jobs:
           docker run --rm \
             -v ${{ github.workspace }}:/data \
             -w /data \
-            -e GITHUB_TOKEN=${{ secrets.PERSONAL_GITHUB_TOKEN }} \
+            -e GITHUB_TOKEN=${{ github.token }} \
             cyteon/markscribe \
             -write README.md templates/readme.tpl
 
